# crane

./: .clang-format  .cppcheck_suppressions  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  CPPLINT.cfg  PROGRESS.md  README.md  dependency.repos  dependency_humble.repos  dependency_jazzy.repos  network.bash  コマンドリスト.txt
consai_ros2/consai_vision_tracker/: CMakeLists.txt  README.md  package.xml
consai_ros2/consai_vision_tracker/launch/: test.launch.py
consai_ros2/consai_vision_tracker/src/: ball_tracker.cpp  robot_tracker.cpp  tracker_component.cpp  tracker_node.cpp  visualization_data_handler.cpp
consai_ros2/robocup_ssl_comm/: CMakeLists.txt  README.md  package.xml
consai_ros2/robocup_ssl_comm/launch/: comm.launch.py
consai_ros2/robocup_ssl_comm/src/: game_controller_component.cpp  game_controller_node.cpp  grsim_component.cpp  grsim_node.cpp  robot_status_component.cpp  robot_status_node.cpp  tracker_component.cpp  tracker_node.cpp  vision_component.cpp  vision_node.cpp
crane_3rdparty/closest_point_vendor/: CMakeLists.txt  package.xml
crane_3rdparty/rvo2_vendor/: CMakeLists.txt  package.xml
crane_behavior_tree/: CMakeLists.txt  package.xml  robot_command_builder.cpp
crane_behavior_tree/include/crane_behavior_tree/: behavior_tree_node.hpp  robot_command_builder.hpp  world_model.hpp
crane_behavior_tree/plugins/action/: example_action.cpp
crane_bt_executor/: CMakeLists.txt  package.xml
crane_bt_executor/behavior_trees/: sample.xml
crane_bt_executor/include/crane_bt_executor/: bt_executor.hpp  bt_executor_component.hpp  bt_tree_builder.hpp  concepts.hpp  node.hpp  robot_io.hpp  role_id.hpp  world_model.hpp
crane_bt_executor/launch/: test.py  test_without_bt.py
crane_bt_executor/src/: bt_executor_node.cpp
crane_bt_executor/src/behavior_tree/: CMakeLists.txt  serialize.cpp
crane_bt_executor/src/skill/: kick_to_target.cpp
crane_bt_executor/src/utils/: robot_command_builder.cpp  tool.cpp
crane_deprecated/crane_bt_executor/: CMakeLists.txt  package.xml
crane_deprecated/crane_bt_executor/launch/: test.py
crane_deprecated/crane_role_assignor/: CMakeLists.txt
crane_dummy_pass_planner/: CMakeLists.txt  package.xml
crane_dummy_pass_planner/include/crane_dummy_pass_planner/: dummy_pass_planner.hpp
crane_dummy_pass_planner/src/: crane_dummy_pass_planner_node.cpp
crane_field_analyzer/: CMakeLists.txt  package.xml
crane_field_analyzer/include/crane_field_analyzer/: field_analyzer.hpp  field_analyzer_component.hpp
crane_field_analyzer/src/: field_analyzer.cpp  field_analyzer_component.cpp  field_analyzer_node.cpp
crane_game_analyzer/: CMakeLists.txt  README.md  package.xml
crane_game_analyzer/include/crane_game_analyzer/: ball_idle_detector.hpp  ball_touch_detector.hpp  game_analyzer.hpp  visibility_control.h
crane_game_analyzer/src/: crane_game_analyzer.cpp  crane_game_analyzer_node.cpp  evaluations.cpp  game_analyzer.cpp  game_analyzer_node.cpp
crane_gui/: CMakeLists.txt  package.xml
crane_gui/include/crane_gui/: gui.hpp  visibility_control.h
crane_gui/src/: crane_gui.cpp  crane_gui_node.cpp
crane_joy_simulator/: CMakeLists.txt  package.xml
crane_joy_simulator/src/: joy_simulator_node.cpp  joystick_example.py
crane_kick_planner/: CMakeLists.txt  package.xml
crane_kick_planner/src/: crane_kick_planner_node.cpp
crane_local_planner/: CMakeLists.txt  package.xml
crane_local_planner/src/: crane_local_planner.cpp  crane_local_planner_node.cpp  gridmap_planner.cpp  local_planner_node.cpp  rvo2_planner.cpp  rvo_planner.cpp  simple_avoid_planner.cpp  simple_planner.cpp  vo_planner.cpp
crane_local_planner/test/: test.cpp
crane_msgs/: CMakeLists.txt  package.xml
crane_msgs/msg/: BallInfo.msg  BehaviorTreeCommand.msg  ControlTarget.msg  DefenseArea.msg  DummyPassPlan.msg  FieldAnalysis.msg  FieldInfo.msg  FieldSize.msg  InPlay.msg  InPlaySituation.msg  PassInfo.msg  PassPlan.msg  PlaySituation.msg  ReceiverPlan.msg  RobotCommand.msg  RobotCommands.msg  RobotInfoOurs.msg  RobotInfoTheirs.msg  RobotScore.msg  RoleCommand.msg  RoleCommands.msg  RoleScore.msg  RoleScores.msg  SubRole.msg  TeamInfoCommon.msg  WorldModel.msg
crane_msgs/msg/analysis/: BallAnalysis.msg  (+3 more)
crane_msgs/srv/: PassRequest.srv  RobotSelect.srv
crane_play_switcher/: CMakeLists.txt  package.xml
crane_play_switcher/src/: play_switcher.cpp  play_switcher_node.cpp
crane_real_sender/: CMakeLists.txt  package.xml
crane_real_sender/src/: real_sender_node.cpp
crane_robot_receiver/: CMakeLists.txt  package.xml
crane_robot_receiver/src/: robot_receiver_node.cpp
crane_robot_skills/: CMakeLists.txt  package.xml
crane_robot_skills/src/: attacker.cpp  ball_nearby_positioner.cpp  cut_pass.cpp  get_ball_contact.cpp  go_over_ball.cpp  goal_kick.cpp  goalie.cpp  goalie_vel.cpp  kick.cpp  kickoff_attack.cpp  marker.cpp  move_with_ball.cpp  penalty_kick.cpp  receive.cpp  receiver.cpp  robot_command_as_skill.cpp  robot_skills.cpp  robot_skills_node.cpp  rotate.cpp  simple_attacker.cpp  simple_kickoff.cpp  single_ball_placement.cpp  sleep.cpp  steal_ball.cpp  steal_ball_vel.cpp  sub_attacker.cpp  teleop.cpp  tuen_around_point.cpp  turn_around_point.cpp
crane_sender/: CMakeLists.txt  package.xml
crane_sender/config/: grsim.yaml
crane_sender/launch/: sender.launch.py
crane_sender/src/: ibis_sender_node.cpp  ibis_velocity_sender_node.cpp  real_sender_node.cpp  sim_sender.cpp  sim_sender_node.cpp
crane_sender/test/: test_robot_packet.cpp
crane_simple_ai/: CMakeLists.txt  package.xml  qt_form.ui
crane_simple_ai/include/: crane_commander.h  crane_commander.hpp
crane_simple_ai/src/: crane_commander.cpp  qt_form.ui  simple_ai_node.cpp
crane_world_model_publisher/: CMakeLists.txt  package.xml
crane_world_model_publisher/include/: estimator.hpp
crane_world_model_publisher/src/: world_model_publisher.cpp  world_model_publisher_node.cpp
crane_world_observer/: CMakeLists.txt  package.xml
crane_world_observer/include/: estimator.hpp  geometry.hpp
crane_world_observer/src/: world_observer_node.cpp
(+744 files in other folders)
