<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_bt_executor</name>
  <version>0.0.0</version>
  <description>Execute behavior tree</description>
  <maintainer email="ibis.ssl.team@gmail.com">ibis ssl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>crane_msgs</depend>
  <depend>crane_3rdparty</depend>
  <depend>crane_geometry</depend>
  <depend>crane_msg_wrappers</depend>
  <depend>crane_world_observer</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
